Added unique username and password lost recovery

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,6 +1,7 @@
 <li>
   <%= gravatar_for user %>
   <%= link_to user.name, user %>
+  <span class="timestamp">@<%= user.username %> </span>
   <% if current_user.admin? && !current_user?(user) %>
       | <%= link_to "delete", user, method: :delete,
                     data: { confirm: "You sure?" } %>
