--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,7 +1,10 @@
-<%= link_to gravatar_for(current_user, size: 52), current_user %>
+<%= link_to gravatar_for(current_user, size: 120), current_user %>
 <h1>
   <%= current_user.name %>
 </h1>
+<h2 class="username">
+  @<%= current_user.username %>
+</h2>
 <span>
   <%= link_to "view my profile", current_user %>
 </span>
