--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -9,6 +9,9 @@
         <%= f.label :name %>
         <%= f.text_field :name %>
 
+        <%= f.label :username %>
+        <%= f.text_field :username %>
+
         <%= f.label :email %>
         <%= f.text_field :email %>
 
@@ -18,7 +21,7 @@
         <%= f.label :password_confirmation, "Confirm Password" %>
         <%= f.password_field :password_confirmation %>
 
-        <%= f.submit "Save changes", class: "btn btn-large btn-primary" %>
+        <%= f.submit "Save changes", class: "btn btn-large btn-primary", name:"edit_action" %>
     <% end %>
 
     <%= gravatar_for @user %>
