--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,9 +3,12 @@
   <aside class="span4">
     <section>
       <h1>
-        <%= gravatar_for @user %>
+        <%= gravatar_for @user, size: 52 %>
         <%= @user.name %>
       </h1>
+      <h2 class="username">
+        @<%= @user.username %>
+      </h2>
     </section>
     <section>
       <%= render 'shared/stats' %>
